force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/filesconnect__Predefined_Object_Content__c.object-meta.xml
<CustomObject>
    <label>Predefined Object Content</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predefined Object Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>