force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clone</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
                <default>true</default>
                <label>Link</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>