force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Container_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Container_Name_Field__c</fullName>
    <label>Container Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>