force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Create_File_Container__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Create_File_Container__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create File Container</label>
    <type>Checkbox</type>
</CustomField>