force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Destination_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Destination_Folder_Id__c</fullName>
    <label>Destination Folder Id</label>
    <length>44</length>
    <type>Text</type>
</CustomField>