force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Destination_Path__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Destination_Path__c</fullName>
    <label>Destination Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>