force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Filter_By_Field__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Filter_By_Field__c</fullName>
    <label>Filter By Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>