force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Object_Record_Type__c</fullName>
    <label>Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>