force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>