force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Predefined_Object_Content_Name__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Predefined_Object_Content_Name__c</fullName>
    <label>Predefined Object Content Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>