force-app/main/default/objects/filesconnect__Predefined_Object_Content__c/fields/filesconnect__Status__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>